# ft-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-debug.yml  build-release.yml  build.yml
examples/: oauth2.rs  simple-test.rs
src/: client.rs  error.rs  lib.rs
src/models/: token.rs  user.rs
tests/: simple-test.rs
