[package]
name = "ft-rs"
version = "0.0.2"
authors = [
	"Killian ROUSSARIE <oss@xtrm.me>"
]
description = "A Rust library for the 42School API"

readme = "README.md"
license = "0BSD"

documentation = "https://docs.rs/ft-rs"
homepage = "https://github.com/seekrs/ft-rs"
repository = "https://github.com/seekrs/ft-rs"

edition = "2021"
rust-version = "1.56"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[features]
default = []