[package]
name = "ft-rs"
version = "0.0.3"
authors = [
	"Killian ROUSSARIE <oss@xtrm.me>"
]
description = "A Rust library for the 42School API"

readme = "README.md"
license = "0BSD"
keywords = ["42", "42school", "api"]
categories = ["api-clients"]

documentation = "https://docs.rs/ft-rs"
homepage = "https://github.com/seekrs/ft-rs"
repository = "https://github.com/seekrs/ft-rs"

edition = "2021"
rust-version = "1.56"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
chrono = "0.4.33"
urlencoding = "2.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }

[dev-dependencies]
once_cell = "1.19.0"
render = "0.3"
rocket = { version = "0.5.0", features = ["serde_json"] }
tokio = { version = "1.13", features = ["full"] }
